--- a/src/content.scss
+++ b/src/content.scss
@@ -125,3 +125,11 @@ html:has(#vimiumHintMarkerContainer) .utags_captain_tag {
 [data-utags_list_node]:hover {
   opacity: 100% !important;
 }
+
+.utags_no_hide [data-utags_list_node*=","] {
+  display: block !important;
+}
+
+.utags_no_opacity_effect [data-utags_list_node*=","] {
+  opacity: 100% !important;
+}
