--- a/src/content.scss
+++ b/src/content.scss
@@ -31,6 +31,9 @@
   font-weight: normal;
   text-decoration: none;
   cursor: pointer;
+  /* Fix v2ex polish start */
+  pointer-events: auto;
+  /* Fix v2ex polish end */
 }
 
 .utags_captain_tag,
@@ -75,6 +78,9 @@
   width: 17px;
   height: 17px;
   transition: all 0s 0.1s;
+  /* Fix v2ex 超级增强 start */
+  z-index: 100;
+  /* Fix v2ex 超级增强 end */
 }
 
 /* Firefox does not support :has */
