--- a/src/content.scss
+++ b/src/content.scss
@@ -95,11 +95,14 @@
     }
 
     .utags_captain_tag:hover,
-    .utags_captain_tag2:hover {
+    .utags_captain_tag:focus,
+    .utags_captain_tag2:hover,
+    .utags_captain_tag2:focus {
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23256cf1' class='bi bi-tags-fill' viewBox='0 0 16 16'%3E %3Cpath d='M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z'/%3E %3Cpath d='M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z'/%3E %3C/svg%3E") !important;
     }
   }
 
+  .utags_captain_tag:focus,
   *:hover + .utags_ul .utags_captain_tag,
   .utags_ul:hover .utags_captain_tag,
   .utags_show_all .utags_captain_tag,
