feat: apply utags to mp.weixin.qq.com

--- a/src/content.scss
+++ b/src/content.scss
@@ -51,6 +51,8 @@
       text-align: center !important;
       min-width: unset !important;
       min-height: unset !important;
+      max-width: unset !important;
+      max-height: unset !important;
       cursor: pointer;
       background: unset !important;
       background-color: unset !important;
