--- a/src/content.scss
+++ b/src/content.scss
@@ -47,6 +47,7 @@
       font-weight: normal !important;
       text-decoration: none !important;
       text-align: center !important;
+      text-shadow: none !important;
       min-width: unset !important;
       min-height: unset !important;
       max-width: unset !important;
