fix: update bilibili selectors

--- a/src/content.scss
+++ b/src/content.scss
@@ -115,7 +115,7 @@
   *:hover + .utags_ul .utags_captain_tag,
   .utags_ul:hover .utags_captain_tag,
   .utags_show_all .utags_captain_tag,
-  :not(a) + .utags_ul .utags_captain_tag {
+  :not(a):not([data-utags_node_type="link"]) + .utags_ul .utags_captain_tag {
     opacity: 100%;
     font-size: 10px !important;
     width: 22px !important;
@@ -132,7 +132,7 @@
     transition: unset !important;
   }
 
-  :not(a) + .utags_ul .utags_captain_tag {
+  :not(a):not([data-utags_node_type="link"]) + .utags_ul .utags_captain_tag {
     position: relative;
   }
 
