--- a/src/content.scss
+++ b/src/content.scss
@@ -151,6 +151,9 @@
   [data-utags_list_node*=",推广,"],
   [data-utags_list_node*=",无聊,"],
   [data-utags_list_node*=",忽略,"],
+  [data-utags_list_node*=",ignore,"],
+  [data-utags_list_node*=",clickbait,"],
+  [data-utags_list_node*=",promotion,"],
   [data-utags_list_node*=",sb,"] {
     opacity: 10%;
   }
