fix(pornhub): update selectors and style

--- a/src/content.scss
+++ b/src/content.scss
@@ -99,6 +99,11 @@
         fill: currentColor !important;
         vertical-align: -3px;
       }
+
+      * {
+        color: inherit !important;
+        fill: currentColor !important;
+      }
     }
 
     .utags_captain_tag {
